<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">TravelTrace</string>
    <string name="string_loading">加载中…</string>
    <string name="string_moments">时刻</string>
    <string name="string_timeline">推荐</string>
    <string name="string_person_center">我的</string>
    <string name="bye_burger_float_behavior">com.rdc.project.traveltrace.behavior.ByeBurgerFloatButtonBehavior</string>
    <string name="bye_burger_bottom_behavior">com.rdc.project.traveltrace.behavior.ByeBurgerBottomBehavior</string>
    <string name="bye_burger_title_behavior">com.rdc.project.traveltrace.behavior.ByeBurgerTitleBehavior</string>
    <string name="container_behavior">com.rdc.project.traveltrace.behavior.ContainerBehavior</string>
    <string name="string_welcome">Welcome</string>
    <string name="string_follow_user">+ 关注</string>
    <string name="string_total_comment">全部评论</string>
    <string name="string_moment_thought">此刻的想法…</string>
    <string name="string_phone_title">+86</string>
    <string name="string_input_phone_number">请输入你的手机号码</string>
    <string name="string_password_title">密码</string>
    <string name="string_input_password">请输入你的密码</string>
    <string name="string_forget_password">忘记密码?</string>
    <string name="string_puzzle_replace">替换</string>
    <string name="string_puzzle_rotate">旋转</string>
    <string name="string_puzzle_flip_horizontal">镜像</string>
    <string name="string_puzzle_flip_vertical">翻转</string>
    <string name="string_puzzle_border">边框</string>
    <string name="string_puzzle_filter">滤镜</string>
    <string name="string_puzzle_temple">模版</string>
    <string name="string_puzzle_save">保存</string>
    <string name="string_puzzle_share">分享</string>
    <string name="string_social_group">圈子</string>
    <string name="string_social_focus">关注</string>
    <string name="string_social_collection">收藏</string>
    <string name="string_social_message">消息</string>
    <string name="string_other">其他</string>
    <string name="string_setting">设置</string>
    <string name="string_about">关于</string>
    <string name="string_logout">注销</string>
    <string name="string_function_introduction">功能介绍</string>
    <string name="string_about_author">关于作者</string>
    <string name="string_version_update">版本更新</string>
    <string name="string_online_feedback">在线反馈</string>
    <string name="string_version_own">研发中心 版权所有</string>
    <string name="string_copyright">CopyRight © 2017 All Rights Reserved</string>
</resources>