<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/activity_layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        app:layout_behavior="@string/container_behavior">

    </FrameLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_liner_horizontal_gradient"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_behavior="@string/bye_burger_title_behavior"
        app:title="@string/app_name"
        app:titleTextColor="@color/white">

    </android.support.v7.widget.Toolbar>

    <ViewStub
        android:id="@+id/activity_view_stub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/bye_burger_bottom_behavior"/>

</android.support.design.widget.CoordinatorLayout>

