<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/PersonCenterDrawableTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:paddingEnd="4dp"
        android:text="@string/string_other"
        android:layout_marginBottom="8dp"
        android:gravity="start|center_vertical"/>

    <TextView
        android:id="@+id/person_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_setting"
        android:textSize="@dimen/dimen_text_size_small"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_setting"
        android:drawablePadding="2dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/person_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_about"
        android:textSize="@dimen/dimen_text_size_small"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_about"
        android:drawablePadding="2dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/person_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_logout"
        android:textSize="@dimen/dimen_text_size_small"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="2dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</merge>
