<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:textSize="@dimen/dimen_text_size_big">

        <RelativeLayout
            android:id="@+id/rl_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:textColor="@color/lightGray">

            <TextView
                android:id="@+id/tv_phone_title"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/string_phone_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_size_big"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_phone_title"
                android:background="@null"
                android:hint="@string/string_input_phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/dimen_text_size_big"/>
        </RelativeLayout>

        <View
            android:id="@+id/spit_view1"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_below="@+id/rl_phone"
            android:background="@color/lightGray"/>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spit_view1"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_password_title"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/string_password_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_size_big"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/tv_forget_password"
                android:layout_toEndOf="@+id/tv_password_title"
                android:background="@null"
                android:hint="@string/string_input_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/lightGray"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/dimen_text_size_big"/>

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/string_forget_password"
                android:textColor="@color/lightGreen"
                android:textSize="@dimen/dimen_text_size_big"/>

            <!--<ImageView-->
            <!--android:id="@+id/btn_login"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:src="@drawable/ic_login_confirm"-->
            <!--android:visibility="gone"/>-->
        </RelativeLayout>

        <View
            android:id="@+id/spit_view2"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_below="@+id/rl_password"
            android:background="@color/lightGray"/>

    </RelativeLayout>
</ScrollView>
